syntax = "proto3";
package shentu.auth.v1alpha1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/certikfoundation/shentu/x/auth/types";

// Query defines the gRPC querier service.
service Query {
  // Validator returns account address corresponding to the validator address.
  rpc Validator(QueryValidatorRequest) returns (QueryValidatorResponse) {
    option (google.api.http).get = "/shentu/auth/v1alpha1/validator/{validator_addr}";
  }
}

// QueryValidatorRequest is response type for the Query/Validator RPC method
message QueryValidatorRequest {
  // validator_addr defines the validator address to query for.
  string validator_addr = 1;
}

// QueryValidatorResponse is response type for the Query/Validator RPC method
message QueryValidatorResponse {
  string account_address = 1;
}
