syntax = "proto3";
package shentu.cert.v1alpha1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "shentu/cert/v1alpha1/cert.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/certikfoundation/shentu/x/cert/types";

// Query defines the gRPC querier service for cert module.
service Query {
    rpc Certifier(QueryCertifierRequest) returns (QueryCertifierResponse) {
        option (google.api.http).get = "/shentu/cert/v1alpha1/certifier/{address}/alias/{alias}";
    }

    rpc Certifiers(QueryCertifiersRequest) returns (QueryCertifiersResponse) {
        option (google.api.http).get = "/shentu/cert/v1alpha1/certifiers";
    }
}

message QueryCertifierRequest {
    string address = 1;
    string alias = 2;
}

message QueryCertifierResponse {
    Certifier certifier = 1 [(gogoproto.nullable) = false];
}

message QueryCertifiersRequest {
}

message QueryCertifiersResponse {
    repeated Certifier certifiers = 1 [(gogoproto.nullable) = false];
}